manifests/manyfold/deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: manyfold
  name: manyfold
spec:
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: manyfold
  template:
    metadata:
      labels:
        app: manyfold
    spec:
      containers:
        - image: ghcr.io/manyfold3d/manyfold
          name: manyfold
          ports:
            - containerPort: 3214
          volumeMounts:
            - mountPath: "/libraries"
              name: manyfold-libraries
        - image: valkey/valkey
          name: valkey
          livenessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - "valkey-cli -h 127.0.0.1 PING | grep PONG"
            initialDelaySeconds: 2
            periodSeconds: 10
            timeoutSeconds: 2
  volumeClaimTemplates:
    - metadata:
        name: manyfold-libraries
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
