manifests/manyfold/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: manyfold
  labels:
    app: manyfold
spec:
  ports:
    - port: 3214
      name: http
  clusterIP: None
  selector:
    app: manyfold
