manifests/manyfold/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: manyfold
  annotations:
    cert-manager.io/cluster-issuer: le-prod
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - manyfold.openlab-augsburg.de
      secretName: ingress-cert
  rules:
    - host: manyfold.openlab-augsburg.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: manyfold
                port:
                  number: 3214
